--- a/index.html
+++ b/index.html
@@ -24,5 +24,168 @@
             </div>
         </div>
     </header>
+    <main>
+        <section class="search">
+            <div class="container">
+                <div class="search-box">
+                    <input type="text">
+                    <button class="btn btn-primary search-btn">
+                        <img src="./img/search.svg" alt="Поиск" class="search-btn__icon">
+                        <span class="search-btn__text">Найти</span>
+                    </button>
+                </div>
+            </div>
+        </section>
+        <section class="content">
+            <div class="container">
+                <div class="content-box">
+                    <div class="content-main">
+                        <h2 class="content-main__title">
+                            Рекомендации для вас
+                        </h2>
+                        <div class="content-main__list">
+                            <a href="product.html" class="content-main__list-item">
+                                <div class="content-main__list-item--img">
+                                    <img src="./img/item.png" alt="item">
+                                </div>
+                                <div class="content-main__list-item--title">
+                                    Пвх материал 2й сорт
+                                </div>
+                                <strong class="content-main__list-item--price">
+                                    170 ₽
+                                </strong>
+                                <div class="content-main__list-item--desc-box">
+                                    <span class="content-main__list-item--desc">Казань, р-н Вахитовский</span>
+                                    <span class="content-main__list-item--desc">10 июля 11:39</span>
+                                </div>
+                            </a>
+                            <a href="product.html" class="content-main__list-item">
+                                <div class="content-main__list-item--img">
+                                    <img src="./img/item.png" alt="item">
+                                </div>
+                                <div class="content-main__list-item--title">
+                                    Пвх материал 2й сорт
+                                </div>
+                                <strong class="content-main__list-item--price">
+                                    170 ₽
+                                </strong>
+                                <div class="content-main__list-item--desc-box">
+                                    <span class="content-main__list-item--desc">Казань, р-н Вахитовский</span>
+                                    <span class="content-main__list-item--desc">10 июля 11:39</span>
+                                </div>
+                            </a>
+                            <a href="product.html" class="content-main__list-item">
+                                <div class="content-main__list-item--img">
+                                    <img src="./img/item.png" alt="item">
+                                </div>
+                                <div class="content-main__list-item--title">
+                                    Пвх материал 2й сорт
+                                </div>
+                                <strong class="content-main__list-item--price">
+                                    170 ₽
+                                </strong>
+                                <div class="content-main__list-item--desc-box">
+                                    <span class="content-main__list-item--desc">Казань, р-н Вахитовский</span>
+                                    <span class="content-main__list-item--desc">10 июля 11:39</span>
+                                </div>
+                            </a>
+                            <a href="product.html" class="content-main__list-item">
+                                <div class="content-main__list-item--img">
+                                    <img src="./img/item.png" alt="item">
+                                </div>
+                                <div class="content-main__list-item--title">
+                                    Пвх материал 2й сорт
+                                </div>
+                                <strong class="content-main__list-item--price">
+                                    170 ₽
+                                </strong>
+                                <div class="content-main__list-item--desc-box">
+                                    <span class="content-main__list-item--desc">Казань, р-н Вахитовский</span>
+                                    <span class="content-main__list-item--desc">10 июля 11:39</span>
+                                </div>
+                            </a>
+                            <a href="product.html" class="content-main__list-item">
+                                <div class="content-main__list-item--img">
+                                    <img src="./img/item.png" alt="item">
+                                </div>
+                                <div class="content-main__list-item--title">
+                                    Пвх материал 2й сорт
+                                </div>
+                                <strong class="content-main__list-item--price">
+                                    170 ₽
+                                </strong>
+                                <div class="content-main__list-item--desc-box">
+                                    <span class="content-main__list-item--desc">Казань, р-н Вахитовский</span>
+                                    <span class="content-main__list-item--desc">10 июля 11:39</span>
+                                </div>
+                            </a>
+                            <a href="product.html" class="content-main__list-item">
+                                <div class="content-main__list-item--img">
+                                    <img src="./img/item.png" alt="item">
+                                </div>
+                                <div class="content-main__list-item--title">
+                                    Пвх материал 2й сорт
+                                </div>
+                                <strong class="content-main__list-item--price">
+                                    170 ₽
+                                </strong>
+                                <div class="content-main__list-item--desc-box">
+                                    <span class="content-main__list-item--desc">Казань, р-н Вахитовский</span>
+                                    <span class="content-main__list-item--desc">10 июля 11:39</span>
+                                </div>
+                            </a>
+                            <a href="product.html" class="content-main__list-item">
+                                <div class="content-main__list-item--img">
+                                    <img src="./img/item.png" alt="item">
+                                </div>
+                                <div class="content-main__list-item--title">
+                                    Пвх материал 2й сорт
+                                </div>
+                                <strong class="content-main__list-item--price">
+                                    170 ₽
+                                </strong>
+                                <div class="content-main__list-item--desc-box">
+                                    <span class="content-main__list-item--desc">Казань, р-н Вахитовский</span>
+                                    <span class="content-main__list-item--desc">10 июля 11:39</span>
+                                </div>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="content-side">
+                        <h3 class="content-side__title">
+                            Сервисы и услуги
+                        </h3>
+                        <div class="content-side__box">
+                            <div class="content-side__list">
+                                <div class="content-side__list-item">
+                                    <img src="./img/delivery.svg" alt="delivery" class="content-side__list-item--img">
+                                    <h5 class="content-side__list-item--title">Доставка</h5>
+                                    <p class="content-side__list-item--text">Проверка при получении и возможность бесплатно вернуть товар</p>
+                                </div>
+                                <div class="content-side__list-item">
+                                    <img src="./img/sedan.svg" alt="sedan" class="content-side__list-item--img">
+                                    <h5 class="content-side__list-item--title">Автотека</h5>
+                                    <p class="content-side__list-item--text">Отчёт с историей авто: пробег, владельцы, сведения о залоге, ДТП и ремонтах</p>
+                                </div>
+                                <div class="content-side__list-item">
+                                    <img src="./img/love.svg" alt="love" class="content-side__list-item--img">
+                                    <h5 class="content-side__list-item--title">Онлайн-бронирование жилья</h5>
+                                    <p class="content-side__list-item--text">Посуточная аренда квартир и домов: большой выбор вариантов для поездок по России</p>
+                                </div>
+                            </div>
+
+                            
+                            <div class="content-side__footer">
+                                <p class="content-side__footer-item">© ООО «Абито», 2011–2021</p>
+                                <a href="" class="content-side__footer-item">Полaитика конфиденциальности</a>
+                                <a href="" class="content-side__footer-item">Обработка данных</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                
+            </div>
+        </section>
+    </main>
 </body>
 </html>
