--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Abito</title>
     <link rel="stylesheet" href="./css/style.css">
+    <script src="./js/index.js" defer></script>
 </head>
 <body>
     <header class="header">
@@ -44,7 +45,7 @@
                             Рекомендации для вас
                         </h2>
                         <div class="content-main__list">
-                            <a href="product.html" class="content-main__list-item">
+                            <!-- <a href="product.html" class="content-main__list-item">
                                 <div class="content-main__list-item--img">
                                     <img src="./img/item.png" alt="item">
                                 </div>
@@ -149,7 +150,7 @@
                                     <span class="content-main__list-item--desc">10 июля 11:39</span>
                                 </div>
                             </a>
-                        </div>
+                        </div> -->
                     </div>
                     <div class="content-side">
                         <h3 class="content-side__title">
